{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 55,
  "lineage": "5f23a2ce-8942-01a6-173f-42d3b1eabd87",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aecd5e546659977d",
            "domain": "vpc",
            "id": "eipalloc-0aecd5e546659977d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-107-22-16-156.compute-1.amazonaws.com",
            "public_ip": "107.22.16.156",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733026618622:internet-gateway/igw-088a730fa11c4fe73",
            "id": "igw-088a730fa11c4fe73",
            "owner_id": "733026618622",
            "vpc_id": "vpc-0930db1468621efc6"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aecd5e546659977d",
            "connectivity_type": "public",
            "id": "nat-0a5f725e0bce35e89",
            "network_interface_id": "eni-0b0350d309a49986d",
            "private_ip": "10.0.1.243",
            "public_ip": "107.22.16.156",
            "subnet_id": "subnet-046aa49ce3f90fb18"
          },
          "dependencies": [
            "aws_eip.myEIP",
            "aws_subnet.mypublicsubnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733026618622:route-table/rtb-05de228257497efa6",
            "id": "rtb-05de228257497efa6",
            "owner_id": "733026618622",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a5f725e0bce35e89",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0930db1468621efc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.myEIP",
            "aws_nat_gateway.NAT-GW",
            "aws_subnet.mypublicsubnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733026618622:route-table/rtb-054275b2004aadec9",
            "id": "rtb-054275b2004aadec9",
            "owner_id": "733026618622",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-088a730fa11c4fe73",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0930db1468621efc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PriRTAss",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c3835b7c715758d",
            "route_table_id": "rtb-05de228257497efa6",
            "subnet_id": "subnet-03d28053e8c629d8f"
          },
          "dependencies": [
            "aws_eip.myEIP",
            "aws_nat_gateway.NAT-GW",
            "aws_route_table.privRT",
            "aws_subnet.myprivatesubnet",
            "aws_subnet.mypublicsubnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PubRTAss",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc3fe6ba492fd3ce",
            "route_table_id": "rtb-054275b2004aadec9",
            "subnet_id": "subnet-046aa49ce3f90fb18"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.publRT",
            "aws_subnet.mypublicsubnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myprivatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733026618622:subnet/subnet-03d28053e8c629d8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d28053e8c629d8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733026618622",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0930db1468621efc6"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mypublicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733026618622:subnet/subnet-046aa49ce3f90fb18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046aa49ce3f90fb18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733026618622",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0930db1468621efc6"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:733026618622:vpc/vpc-0930db1468621efc6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c5da95d39db6bfb",
            "default_route_table_id": "rtb-09d56b1550a50ed6d",
            "default_security_group_id": "sg-0b5fec1a4884442a1",
            "dhcp_options_id": "dopt-04a619e3ecfb118ef",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0930db1468621efc6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d56b1550a50ed6d",
            "owner_id": "733026618622"
          }
        }
      ]
    }
  ]
}